--- a/_media.scss
+++ b/_media.scss
@@ -37,6 +37,12 @@
   }
 }
 @media (max-width: 767.98px) {
+  .hero__wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 80vh;
+  }
   .header__nav {
     display: none;
   }
