--- a/style.css
+++ b/style.css
@@ -15,18 +15,22 @@ body {
   flex-direction: column;
 }
 
-.carousel-indicators > * {
-  background-color: rgb(124, 124, 124) !important;
-}
-
-.carousel-indicators .active {
-  background-color: #244d4d !important;
-}
-
 .container {
   max-width: 1440px;
   padding: 0 20px;
   margin: 0 auto;
+}
+
+.header {
+  background-color: #fff;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0px;
+  z-index: 100;
+}
+.header__container {
+  padding-bottom: 27px;
+  padding-top: 27px;
 }
 
 .navbar-brand {
@@ -41,6 +45,14 @@ body {
   background-color: rgba(248, 249, 250, 0) !important;
 }
 
+.form-control:focus {
+  color: #244d4d;
+  background-color: #fff;
+  border-color: #244d4d;
+  outline: 0;
+  box-shadow: 0 0 5px 0.05rem rgba(36, 77, 77, 0.4745098039);
+}
+
 .btn-outline-success {
   color: #244d4d;
   background-color: transparent;
@@ -52,13 +64,6 @@ body {
   color: #fff;
   background-color: #244d4d;
   border-color: #244d4d;
-}
-
-.header__container {
-  padding-top: 44px;
-  padding-bottom: 27px;
-  padding-top: 44px;
-  padding-bottom: 27px;
 }
 
 .main {
@@ -75,7 +80,7 @@ body {
   margin-bottom: 140px;
 }
 .hero__picture {
-  min-width: 500px;
+  min-width: 499px;
 }
 .hero__cta {
   max-width: 700px;
@@ -108,6 +113,9 @@ body {
   background-color: #fff;
   padding: 20px 40px;
 }
+.hero__button:hover {
+  color: #244d4d;
+}
 
 .section {
   margin-bottom: 140px;
@@ -129,6 +137,14 @@ body {
   align-items: center;
   flex-wrap: wrap;
   margin-top: 40px;
+}
+
+.carousel-indicators > * {
+  background-color: rgb(124, 124, 124) !important;
+}
+
+.carousel-indicators .active {
+  background-color: #244d4d !important;
 }
 
 .slider__header {
@@ -294,6 +310,12 @@ body {
   margin-top: 20px;
   color: #fff;
 }
+.footer__link {
+  color: #fff;
+}
+.footer__link:hover {
+  color: #fff;
+}
 
 @media (max-width: 1059.98px) {
   .list__wrapper {
@@ -331,6 +353,12 @@ body {
   }
 }
 @media (max-width: 767.98px) {
+  .hero__wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 80vh;
+  }
   .header__nav {
     display: none;
   }
