--- a/style.css
+++ b/style.css
@@ -328,6 +328,9 @@ body {
   color: rgb(117, 117, 117);
 }
 .footer__copyright {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   border-top: 1px solid #fff;
   padding-top: 13px;
   font-family: "DM Sans";
@@ -336,7 +339,6 @@ body {
   font-size: 18px;
   line-height: 23px;
   color: #fff;
-  text-align: center;
 }
 
 @media (max-width: 1059.98px) {
