--- a/style.scss
+++ b/style.scss
@@ -73,6 +73,10 @@ body {
 .bg-light {
   background-color: rgba(248, 249, 250, 0) !important;
 }
+.form-control {
+  margin-right: 2vw;
+  width: 40vw;
+}
 .form-control:focus {
   color: $primary;
   background-color: #fff;
@@ -91,7 +95,13 @@ body {
   background-color: $primary;
   border-color: $primary;
 }
-
+.btn-outline-success:active,
+.btn-outline-success:focus {
+  color: #fff;
+  background-color: $primary !important;
+  border-color: $primary !important;
+  box-shadow: 0 0 5px 0.05rem $primary !important;
+}
 .main {
   flex: 1 1 auto;
 }
@@ -128,7 +138,6 @@ body {
     font-weight: 400;
     font-size: 20px;
     line-height: 125%;
-
     color: $light;
     margin: 30px 0;
   }
