visual responsib complete

--- a/_media.scss
+++ b/_media.scss
@@ -1,16 +1,16 @@
 @media (max-width: 1059.98px) {
   .trusted__content {
   }
-  .list__wrapper {
-    justify-content: center;
-  }
+
   .furniture {
     margin: 80px 15px 80px 15px;
   }
-  .furniture:not(:first-child) {
-    display: none;
-  }
+
   .hero__wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 80vh;
     flex-direction: column;
     padding: 60px 20px;
   }
@@ -36,12 +36,9 @@
     flex-wrap: wrap;
   }
 }
-@media (max-width: 767.98px) {
-  .hero__wrapper {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 80vh;
+@media (max-width: 899.98px) {
+  .furniture:not(:first-child) {
+    display: none;
   }
   .header__nav {
     display: none;
@@ -53,3 +50,9 @@
     font-size: 20px;
   }
 }
+
+// .footer__wrapper {
+//   display: flex;
+//   justify-content: space-between;
+//   flex-direction: column;
+// }
