--- a/style.scss
+++ b/style.scss
@@ -131,7 +131,11 @@ body {
     line-height: 100%;
     color: $light;
   }
-
+  @media (max-width: 1269.98px) {
+    .hero__header {
+      font-size: 54px;
+    }
+  }
   &__paragraph {
     font-family: $primary-font;
     font-style: normal;
@@ -188,6 +192,7 @@ body {
 .carousel-indicators .active {
   background-color: $primary !important;
 }
+
 .slider {
   &__header {
     @include header(32px);
@@ -209,9 +214,17 @@ body {
 .list__wrapper {
   display: flex;
   justify-content: space-between;
-  flex-wrap: wrap;
 }
 
+@media (max-width: 1269.98px) {
+  .list__wrapper {
+    justify-content: space-around;
+  }
+
+  .furniture:last-child {
+    display: none;
+  }
+}
 .furniture {
   margin: 80px 15px 140px 15px;
   box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.227);
@@ -356,6 +369,15 @@ body {
     justify-content: space-between;
     flex-wrap: wrap;
   }
+  @media (max-width: 594.98px) {
+    .footer__wrapper {
+      flex-direction: column;
+      align-items: center;
+    }
+  }
+  &__text {
+    padding: 0 20px;
+  }
 
   &__header {
     font-family: $primary-font;
@@ -389,6 +411,7 @@ body {
     align-items: center;
     border-top: 1px solid $light;
     padding-top: 13px;
+    padding-inline: 5px;
     font-family: 'DM Sans';
     font-style: normal;
     font-weight: 400;
