--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ body {
 
 .header {
   background-color: #fff;
+  box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.227);
   position: -webkit-sticky;
   position: sticky;
   top: 0px;
@@ -359,7 +360,7 @@ body {
   color: #fff;
 }
 .footer__link:hover {
-  color: rgb(117, 117, 117);
+  color: #757575;
 }
 .footer__copyright {
   display: flex;
