--- a/style.css
+++ b/style.css
@@ -309,8 +309,10 @@ body {
   font-weight: 500;
   font-size: 16px;
   color: #808080;
+  transition: all 0.3s;
 }
 .catalog__item:hover {
+  transition: all 0.3s;
   background-color: #244d4d;
   color: #fff;
 }
@@ -358,9 +360,11 @@ body {
   padding: 0;
   margin: 0;
   color: #fff;
+  transition: color 0.3s;
 }
 .footer__link:hover {
-  color: #757575;
+  transition: color 0.3s;
+  color: #d4d4d4;
 }
 .footer__copyright {
   display: flex;
