--- a/style.scss
+++ b/style.scss
@@ -1,5 +1,5 @@
 @import url(./reset.css);
-@import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Montserrat:wght@600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Montserrat:wght@600;700&display=swap");
 @mixin header($fz) {
   font-family: $primary-font;
   font-style: normal;
@@ -10,10 +10,10 @@
 $dark: #161616;
 $dark-2: #444;
 $light: #fff;
-$light-2: #757575;
+$light-2: #d4d4d4;
 $primary: #244d4d;
-$secondary-font: 'Montserrat', sans-serif;
-$primary-font: 'DM Sans', sans-serif;
+$secondary-font: "Montserrat", sans-serif;
+$primary-font: "DM Sans", sans-serif;
 $transition-link: color 0.5s ease;
 $section-margin: 140px;
 html {
@@ -307,7 +307,7 @@ body {
   &__picture-wrapper {
     position: relative;
     &::before {
-      content: '';
+      content: "";
       width: 190px;
       height: 85px;
       background-color: $primary;
@@ -317,7 +317,7 @@ body {
       top: -9px;
     }
     &::after {
-      content: '';
+      content: "";
       width: 190px;
       height: 85px;
       background-color: $primary;
@@ -347,7 +347,9 @@ body {
     font-weight: 500;
     font-size: 16px;
     color: #808080;
+    transition: all 0.3s;
     &:hover {
+      transition: all 0.3s;
       background-color: $primary;
       color: $light;
     }
@@ -398,7 +400,9 @@ body {
     padding: 0;
     margin: 0;
     color: $light;
+    transition: color 0.3s;
     &:hover {
+      transition: color 0.3s;
       color: $light-2;
     }
   }
@@ -409,7 +413,7 @@ body {
     border-top: 1px solid $light;
     padding-top: 13px;
     padding-inline: 5px;
-    font-family: 'DM Sans';
+    font-family: "DM Sans";
     font-style: normal;
     font-weight: 400;
     font-size: 18px;
